--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -253,14 +253,27 @@
 
 \def\multimorphism[#1,#2][#3][#4][#5][#6] {
     \node[multimorphism] (#3) at (#1,#2) {$#3$};
-    \draw (#3.north west) to ++(-.5,0) node[left] (#3x1) {#4};
-    \draw (#3.south west) to ++(-.5,0) node[left] (#3xn) {#5};
-    \draw (#3.east) to ++(.5,0) node[right] (#3y) {#6};
+    \draw (#3.north west) to ++(-.3,0) node[left] (#3x1) {#4};
+    \draw (#3.south west) to ++(-.3,0) node[left] (#3xn) {#5};
+    \draw (#3.east) to ++(.3,0) node[right] (#3y) {#6};
     \node[anchor=center,left of=#3,yshift=1mm,xshift=2mm] {$\vdots$};
   }
 
+\def\twomultimorphism[#1,#2][#3][#4][#5][#6] {
+    \node[multimorphism] (#3) at (#1,#2) {$#3$};
+    \draw (#3.north west) to ++(-.3,0) node[left] (#3x1) {#4};
+    \draw (#3.south west) to ++(-.3,0) node[left] (#3xn) {#5};
+    \draw (#3.east) to ++(.3,0) node[right] (#3y) {#6};
+  }
+
+\def\narrowtwomultimorphism[#1,#2][#3][#4][#5][#6] {
+    \node[multimorphism] (#3) at (#1,#2) {$#3$};
+    \draw ([yshift=-2mm]#3.north west) to ++(-.3,0) node[left] (#3x1) {#4};
+    \draw ([yshift=2mm]#3.south west) to ++(-.3,0) node[left] (#3xn) {#5};
+    \draw (#3.east) to ++(.3,0) node[right] (#3y) {#6};
+  }
 \def\wire[#1][#2][#3] {
-  \draw ($(#1.east)+(.5,0)$) to[out=0,in=180] ($(#2.#3 west)+(-.5,0)$);
+  \draw ($(#1.east)+(.3,0)$) to[out=0,in=180] ($(#2.#3 west)+(-.3,0)$);
 }
 
 \def\comb[#1,#2][#3,#4][#5][#6] {
